doc/examples/InvalidTests/TestInvalidType.agl
# Neste exemplo, deve dar erro pois não existe o tipo Integere

a: Integere = 0;
